refactor: add input title to header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<customer-registration-header></customer-registration-header>
+<customer-registration-header [title]="title"></customer-registration-header>
 <router-outlet></router-outlet>
