--- a/modules/feature/layout/src/lib/header/header.component.html
+++ b/modules/feature/layout/src/lib/header/header.component.html
@@ -1,3 +1,3 @@
 <header class="header">
-  <h1 class="header__logo">Cadastro de Clientes</h1>
+  <h1 class="header__logo">{{ title }}</h1>
 </header>
