feat(customer-search): integrates in header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<customer-registration-header [title]="title"></customer-registration-header>
+<customer-registration-header [title]="title">
+  <customer-registration-customer-search></customer-registration-customer-search>
+  <a right>login</a>
+</customer-registration-header>
 <router-outlet></router-outlet>
