--- a/modules/feature/customer/search/src/lib/customer-search/customer-search.component.html
+++ b/modules/feature/customer/search/src/lib/customer-search/customer-search.component.html
@@ -1,1 +1,9 @@
-<p>customer-search works!</p>
+<input
+  id="typeahead-basic"
+  aria-label="digite o cliente que você quer encontrar"
+  placeholder="Buscar cliente"
+  type="text"
+  class="form-control search"
+  [formControl]="control"
+  [ngbTypeahead]="search"
+/>
