--- a/modules/feature/layout/src/lib/header/header.component.html
+++ b/modules/feature/layout/src/lib/header/header.component.html
@@ -1,3 +1,13 @@
 <header class="header">
-  <h1 class="header__logo">{{ title }}</h1>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <div class="col-12 col-md-4">
+        <a class="navbar-brand" href="#">{{ title }}</a>
+      </div>
+      <div class="d-flex gap-2 align-items-center">
+        <ng-content></ng-content>
+        <ng-content select="[right]"></ng-content>
+      </div>
+    </div>
+  </nav>
 </header>
