feat(home): add our customers

--- a/modules/feature/layout/src/lib/header/header.component.html
+++ b/modules/feature/layout/src/lib/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
-  <nav class="navbar navbar-expand-lg bg-dark">
-    <div class="container-fluid">
+  <div class="navbar navbar-expand-lg bg-dark">
+    <div class="container">
       <div class="col-12 col-md-4">
         <a
           class="navbar-brand text-white"
@@ -14,5 +14,5 @@
         <ng-content select="[right]"></ng-content>
       </div>
     </div>
-  </nav>
+  </div>
 </header>
