--- a/modules/feature/home/src/lib/home/home.component.html
+++ b/modules/feature/home/src/lib/home/home.component.html
@@ -1,49 +1,26 @@
-<section class="container mt-5">
-  <h2 class="text-center mb-4">Nossos Clientes</h2>
+<main class="container mt-5">
+  <section>
+    <h2 class="text-center mb-4">Nossos Clientes</h2>
 
-  <div class="row">
-    <!-- Cliente 1 -->
-    <div class="col-md-6 col-lg-3 mb-4">
-      <div class="card">
-        <img src="cliente1.jpg" class="card-img-top" alt="Cliente 1" />
-        <div class="card-body">
-          <h5 class="card-title">Nome do Cliente 1</h5>
-          <p class="card-text">Descrição ou detalhes sobre o Cliente 1.</p>
+    <div class="row">
+      <!-- Cliente 1 -->
+      @for (customer of customers; track customer.id) {
+      <div class="col-md-6 col-lg-3 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">{{ customer.name }}</h5>
+            <span class="card-text">{{ customer.email }}</span>
+            <small class="text-muted"
+              >data de cadastro: {{ customer.createdAt | date }}</small
+            >
+          </div>
         </div>
       </div>
-    </div>
-
-    <!-- Cliente 2 -->
-    <div class="col-md-6 col-lg-3 mb-4">
-      <div class="card">
-        <img src="cliente2.jpg" class="card-img-top" alt="Cliente 2" />
-        <div class="card-body">
-          <h5 class="card-title">Nome do Cliente 2</h5>
-          <p class="card-text">Descrição ou detalhes sobre o Cliente 2.</p>
-        </div>
+      } @empty {
+      <div class="col">
+        <p class="text-center">Nenhum cliente encontrado</p>
       </div>
+      }
     </div>
-
-    <!-- Cliente 3 -->
-    <div class="col-md-6 col-lg-3 mb-4">
-      <div class="card">
-        <img src="cliente3.jpg" class="card-img-top" alt="Cliente 3" />
-        <div class="card-body">
-          <h5 class="card-title">Nome do Cliente 3</h5>
-          <p class="card-text">Descrição ou detalhes sobre o Cliente 3.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Cliente 4 -->
-    <div class="col-md-6 col-lg-3 mb-4">
-      <div class="card">
-        <img src="cliente4.jpg" class="card-img-top" alt="Cliente 4" />
-        <div class="card-body">
-          <h5 class="card-title">Nome do Cliente 4</h5>
-          <p class="card-text">Descrição ou detalhes sobre o Cliente 4.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
+</main>
