--- a/modules/feature/home/src/lib/home/home.component.html
+++ b/modules/feature/home/src/lib/home/home.component.html
@@ -6,19 +6,21 @@
       <!-- Cliente 1 -->
       @for (customer of customers$ | async; track customer.id) {
       <div class="col-md-6 col-lg-3 mb-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">{{ customer.name }}</h5>
-            <span class="card-text">{{ customer.email }}</span>
-            <small class="text-muted"
-              >data de cadastro: {{ customer.createdAt | date }}</small
-            >
-          </div>
-        </div>
+        <customer-registration-customer-card
+          [customer]="customer"
+        ></customer-registration-customer-card>
       </div>
       } @empty {
-      <div class="col">
-        <p class="text-center">Nenhum cliente encontrado</p>
+      <div class="col d-flex justify-content-center align-items-center gap-2">
+        <span class="spinner-grow" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </span>
+        <span class="spinner-grow" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </span>
+        <span class="spinner-grow" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </span>
       </div>
       }
     </div>
