feat(customer-detail): add customer detail routing

--- a/modules/feature/customer/detail/src/lib/customer-detail/customer-detail.component.html
+++ b/modules/feature/customer/detail/src/lib/customer-detail/customer-detail.component.html
@@ -1,1 +1,7 @@
-<p>customer-detail works!</p>
+<main>
+  <section>
+    <div class="container">
+      {{ id$ | async }}
+    </div>
+  </section>
+</main>
