--- a/modules/feature/customer/detail/src/lib/customer-detail/customer-detail.component.html
+++ b/modules/feature/customer/detail/src/lib/customer-detail/customer-detail.component.html
@@ -1,7 +1,26 @@
 <main>
   <section>
-    <div class="container">
-      {{ id$ | async }}
+    <div class="container mt-4">
+      <h1>Detalhes do cliente</h1>
+      <div class="d-none">{{ customer$ | async }}</div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nome</th>
+            <th scope="col">Telefone</th>
+            <th scope="col">logradouro</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">{{ customer.id }}</th>
+            <td>{{ customer.name }}</td>
+            <td>{{ customer.phone }}</td>
+            <td>{{ customer.neighborhood }}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </section>
 </main>
