refactor(customer-detail): pipe

--- a/modules/ui/customer/src/components/card/customer-card.component.html
+++ b/modules/ui/customer/src/components/card/customer-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" [routerLink]="['/customer', customer.id]">
   <div class="card-body">
     <h5 class="card-title">{{ customer.name }}</h5>
     <div class="card-text">{{ customer.email }}</div>
