--- a/modules/feature/customer/detail/src/lib/customer-detail/customer-detail.component.html
+++ b/modules/feature/customer/detail/src/lib/customer-detail/customer-detail.component.html
@@ -6,7 +6,7 @@
         [customer]="customer"
       ></customer-registration-customer-card>
       <div class="customer-detail__info">
-        <h2>{{ customer.cpf | cpfFormat : customer.cpf.length }}</h2>
+        <h2>{{ customer.cpf | cpfFormat }}</h2>
         <button class="btn btn-primary">Editar</button>
       </div>
     </ng-container>
