--- a/modules/feature/home/src/lib/home/home.component.html
+++ b/modules/feature/home/src/lib/home/home.component.html
@@ -4,7 +4,9 @@
 
     <div class="row my-2">
       <div class="col">
-        <button class="btn btn-primary">Novo Cliente</button>
+        <button class="btn btn-primary" (click)="openModal()">
+          Novo Cliente
+        </button>
       </div>
     </div>
     <div class="row">
