feat(customer-register): add function fillOutForm

--- a/modules/feature/customer/register/src/lib/register/register.component.html
+++ b/modules/feature/customer/register/src/lib/register/register.component.html
@@ -53,12 +53,12 @@
         />
       </div>
       <div class="col-md-6">
-        <label for="phoneNumber">Número de telefone:</label>
+        <label for="phone">Número de telefone:</label>
         <input
           class="form-control"
           type="tel"
-          id="phoneNumber"
-          formControlName="phoneNumber"
+          id="phone"
+          formControlName="phone"
         />
       </div>
       <!-- Endereço Residencial -->
