--- a/modules/feature/home/src/lib/home/home.component.html
+++ b/modules/feature/home/src/lib/home/home.component.html
@@ -9,27 +9,31 @@
         </button>
       </div>
     </div>
-    <div class="row">
-      <!-- Cliente 1 -->
-      @for (customer of customers$ | async; track customer.id) {
+    <!-- Cliente 1 -->
+    @if (customers$ | async; as customer) {
+    <div class="row" [@listState]>
+      @for (customer of customer; track customer.id) {
       <div class="col-md-6 col-lg-3 mb-4">
         <customer-registration-customer-card
           [customer]="customer"
         ></customer-registration-customer-card>
       </div>
       } @empty {
-      <div class="col d-flex justify-content-center align-items-center gap-2">
-        <span class="spinner-grow" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </span>
-        <span class="spinner-grow" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </span>
-        <span class="spinner-grow" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </span>
-      </div>
+      <p>Nenhum cliente</p>
       }
     </div>
+    } @else {
+    <div class="col d-flex justify-content-center align-items-center gap-2">
+      <span class="spinner-grow" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </span>
+      <span class="spinner-grow" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </span>
+      <span class="spinner-grow" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </span>
+    </div>
+    }
   </section>
 </main>
